# DSPJIT

./: .gitmodules  CMakeLists.txt  LICENSE  README
include/DSPJIT/: abstract_execution_engine.h  abstract_graph_memory_manager.h  abstract_node_state.h  common_nodes.h  compile_node_class.h  composite_node.h  external_plugin.h  graph_compiler.h  graph_execution_context.h  graph_execution_context_factory.h  graph_memory_manager.h  ir_helper.h  llvm_legacy_execution_engine.h  lock_free_queue.h  log.h  node_state.h
src/: CMakeLists.txt  benchmark.cpp  common_nodes.cpp  common_nodes.h  compile_node_class.cpp  compile_node_class.h  composite_compile_node.cpp  composite_compile_node.h  composite_node.cpp  composite_node.h  external_plugin.cpp  external_plugin.h  graph_compiler.cpp  graph_compiler.h  graph_execution_context.cpp  graph_execution_context.h  graph_execution_context_factory.cpp  graph_state_manager.cpp  graph_state_manager.h  ir_helper.cpp  ir_helper.h  ir_optimization.cpp  ir_optimization.h  jit_compiler.cpp  jit_compiler.h  lock_free_queue.h  log.cpp  log.h  node.h  object_dumper.cpp  object_dumper.h  process_node.h  setup_test.cpp  test.cpp  test_implentations.cpp  test_implentations.h
src/execution_engine/: llvm_legacy_execution_engine.cpp
src/external_plugin/: external_plugin.cpp  external_plugin.h  external_plugin_node.cpp  external_plugin_node.h
src/memory_manager/: graph_memory_manager.cpp  node_state.cpp
src/tests/: main.cpp  test_composite_node.cpp  test_execution_context.cpp  test_node.cpp
